bugfix: no more init order problems